--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.6.21'
+        nav_version = '2.4.2'
+        compose_version = "1.2.0-beta02"
+        compose_nav = "2.5.0-rc01"
+        compose_coil = '2.1.0'
+
+    }
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_ver"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
