--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -44,13 +45,11 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
-    //Not sure if I'll need this but I want it!
-   // implementation 'com.google.dagger:hilt-android:2.42'
+    implementation 'com.google.dagger:hilt-android:2.42'
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.3'
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
-    kapt 'com.google.dagger:hilt-android-compiler:2.42'
     implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
@@ -63,6 +62,7 @@ dependencies {
 
     implementation "androidx.compose.compiler:compiler:$compose_version"
 
+    kapt 'com.google.dagger:hilt-android-compiler:2.42'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
