--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,16 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdk 31
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.example.weatherapp"
-        minSdk 26
-        targetSdk 31
+        minSdkVersion 26
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +31,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "$compose_version"
+    }
+
+    buildFeatures {
+        compose true
+    }
 }
 
 dependencies {
@@ -37,8 +46,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
 
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
@@ -62,7 +69,19 @@ dependencies {
 
     implementation "androidx.compose.compiler:compiler:$compose_version"
 
+    implementation "androidx.compose.ui:ui-viewbinding:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.activity:activity-compose:1.6.0-alpha05'
+    implementation 'com.google.dagger:hilt-android:2.28-alpha'
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0"
     kapt 'com.google.dagger:hilt-android-compiler:2.42'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
