--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.activity:activity-compose:1.6.0-alpha05'
-    implementation 'com.google.dagger:hilt-android:2.28-alpha'
+    implementation 'com.google.dagger:hilt-android:2.42'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
 
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.airbnb.android:lottie-compose:$lottieVersion"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0"
@@ -84,6 +86,12 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.+'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'io.mockk:mockk-android:1.12.4'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+
 }
