--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,16 @@ buildscript {
         compose_version = "1.2.0-beta02"
         compose_nav = "2.5.0-rc01"
         compose_coil = '2.1.0'
+        lottieVersion = '5.2.0'
 
     }
 
     repositories {
         google()
         mavenCentral()
+
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
